Refactor layout and styles for Puppy Hello World project; add Chart.js integration with sample data visualization

--- a/index.html
+++ b/index.html
@@ -5,13 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Puppy Hello World</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="script.js"></script>
 </head>
 <body>
-    <div class="container">
-        <div class="puppy-container">
-            <img src="https://images.pexels.com/photos/1108099/pexels-photo-1108099.jpeg" alt="Cute puppy" class="puppy-image">
+    <div class="page-container">
+        <div class="left-content">
+            <div class="puppy-container">
+                <img src="https://images.pexels.com/photos/1108099/pexels-photo-1108099.jpeg" alt="Cute puppy" class="puppy-image">
+            </div>
+            <h1>Hello World!</h1>
         </div>
-        <h1>Hello World!</h1>
+        <div class="chart-container">
+            <canvas id="dohChart"></canvas>
+        </div>
     </div>
 </body>
 </html>
